# practice

C/hello_world/: main  main.cpp
DotNet/: .gitignore
DotNet/DotNetCoreSampleServer/: README.md
DotNet/DotNetCoreSampleServer/SampleServer/: Global.cs  Program.cs  SampleServer.csproj  Server.cs  Session.cs  Worker.cs
DotNet/hello-world/: Program.cs  hello-world.csproj
DotNet/string-compare/: Program.cs  string-compare.csproj
Flutter/charing_test/: pubspec.yaml
Flutter/charing_test/lib/: main.dart
Flutter/charing_test/linux/: app_configuration.mk  window_configuration.cc
Flutter/deskapp/: README.md  pubspec.yaml
Flutter/deskapp/linux/: app_configuration.mk  window_configuration.cc
Flutter/deskapp/test/: widget_test.dart
Flutter/i_am_rich/: pubspec.yaml
Rust/: launch.json
Rust/branches/: Cargo.toml
Rust/communicator/: Cargo.toml
Rust/diesel_demo/: Cargo.toml
Rust/enums_and_pattern_matching/: Cargo.toml
Rust/error_handling/: Cargo.toml
Rust/error_handling2/: Cargo.toml
Rust/flow_control/: Cargo.toml
Rust/functions/: Cargo.toml
Rust/general_collections/: Cargo.toml
Rust/generic/: Cargo.toml
Rust/generic/src/: lib.rs  main.rs
Rust/guessing-game/: Cargo.toml
Rust/hello-world/: Cargo.toml
Rust/lifetime/: Cargo.toml
Rust/lifetime/src/: main.rs
Rust/loops/: Cargo.toml
Rust/methods/: Cargo.toml
Rust/ownership/: Cargo.toml
Rust/references-and-borrowing/: Cargo.toml
Rust/slices/: Cargo.toml
Rust/structure/: Cargo.toml
Rust/testing/: Cargo.toml
Rust/types/: Cargo.toml
Rust/variables/: Cargo.toml
(+88 files in other folders)
